* MB 7.0.2

Changed the third party charting software from Sitraka (was KLGroup) 
jcchart400K.jar to an upgrade of jcchart451K.jar.   Enables Inventory GUI 
improvements.  Cannot mix and match different builds of glm and core.

* MB 7.0.1

Default database connection information has been moved out of all
standard ".q" and ".cfg" files.  This means that Parameters are now 
required, either from a .cougaarrc file (was .alprc - see below) or as
-D arguments on the java command line (org.cougaar.database,
org.cougaar.database.user, org.cougaar.database.password).

Parameters files have changed a bit.  Previous versions used the file
.alprc as found in the ConfigPath.  Now, parameters are set first from
a file ".cougaarrc" in $HOME and then by the file cougaar.rc somewhere
in ConfigPath (e.g. in your society's config directory).  This allows,
for instance, databases to be selected in the the config directory but
have individual usernames and passwords set outside on a per-user
basis.  See the javadoc for org.cougaar.util.Parameters for more
information.   A (non-functional) example of the format expected in
these files is in this directory (core/doc) as "example.cougaarrc".

At this point, .alprc is still searched for and used as before, albeit
with warnings that they will be ignored in some future release.

* MB 7.0

Package reorganization to support COUGAAR opensource release 7.0.
Details may be found in 7.0/alp7.pkg.  Changes are reflected in
javadocs and other documentation.

* MB 6.8.2

New PG in alp domain LocationSchedulePG is maintained by
OrgRTDataPlugin (for "Home location") and by new OPlanWatcherLP (for
oplan-directed location assignments).  It is up to consumers to
interpret the schedule and assign semantics.  However, a useful method
is TimeSpanSet.getMinimalIntersectingElement(long time) which when
called on a schedule, will return the shortest element overlapping the
specified time.  This is experimental functionality at this point.
